src/Base/main/default/objects/Partner_Program_Volume_Setting__mdt/Partner_Program_Volume_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings used in the Partner Program Volume levels</description>
    <label>Partner Program Volume Setting</label>
    <pluralLabel>Partner Program Volume Settings</pluralLabel>
</CustomObject>