src/Base/main/default/objects/Partner_Program_Volume_Setting__mdt/fields/Maximum_Applicable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Applicable_Amount__c</fullName>
    <description>The maximum amount for this Program to be applicable, anything highter this amount results in a discount equals to Maximum Discount Amount</description>
    <label>Maximum Applicable Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>