src/Base/main/default/objects/Partner_Program_Volume_Setting__mdt/fields/Maximum_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Discount_Percent__c</fullName>
    <description>The maximum discount percent this Program can apply</description>
    <label>Maximum Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>