src/Base/main/default/objects/Partner_Program_Volume_Setting__mdt/fields/Minimum_Applicable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Applicable_Amount__c</fullName>
    <description>The minimum amount for this Program to be applicable, anything lower this amount results in 0% discount</description>
    <inlineHelpText>The minimum amount for this Program to be applicable, anything lower this amount results in 0% discount</inlineHelpText>
    <label>Minimum Applicable Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>